# harp

./: .gitignore  Cargo.toml  README.md  RELEASE.md
.github/workflows/: ci.yml
community/fish_bookmarks/: README.md  config.fish
community/helix/: README.md
community/neovim/: README.md  init.lua
src/: args.rs  data.rs  error.rs  help.txt  lib.rs  main.rs
