[package]
name = "axleharp"
version = "3.0.0"
edition = "2021"
authors = ["Axlefublr"]
license = "MIT"
description = "File location storer, designed to be used from within text editors."
readme = "README.md"
homepage = "https://github.com/Axlefublr/harp"
repository = "https://github.com/Axlefublr/harp"

[[bin]]
name = "harp"
path = "src/main.rs"

[lints.rustdoc]
unescaped_backticks = "deny"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.4", features = ["wrap_help", "derive"] }
dirs = "5.0.1"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
